# DevmanTGBotApi

./: . dockerignore  .gitignore  Dataclassapi.py  Dockerfile  README.md  READMEE.md  bot_logger.py  dataclasses.py  functions.py  main.py  pyproject.toml
