[tool.poetry]
name = "programmproject"
version = "0.1.0"
description = ""
authors = ["Павел <king-he@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
environs = "^9.5.0"
python-telegram-bot = "13.15"
python-telegram-bot = "13.15"
pydantic = "^2.1.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
